--- a/.example.env
+++ b/.example.env
@@ -1,1 +1,1 @@
-APP_DEBUG = true[APP]DEFAULT_TIMEZONE = Asia/Shanghai[DATABASE]TYPE = mysqlHOSTNAME = 127.0.0.1DATABASE = testUSERNAME = usernamePASSWORD = passwordHOSTPORT = 3306CHARSET = utf8DEBUG = true[LANG]default_lang = zh-cn
+APP_DEBUG = false[APP]DEFAULT_TIMEZONE = Asia/ShanghaiPANEL_TITLE =PANEL_KEYWORDS =PANEL_DESCRIPTION =PANEL_KEY =MERCHANT_URL =[DATABASE]TYPE = mysqlHOSTNAME = 127.0.0.1DATABASE = testUSERNAME = usernamePASSWORD = passwordHOSTPORT = 3306CHARSET = utf8DEBUG = false[LANG]default_lang = zh-cn
